# vala

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
configs/: config.docker.yml  lichess-bot.yml.example
docs/: FINDINGS.md  research-brief.md
scripts/: bench_maia.py  play_vs_maia.py  probe_allie.py  trap_probe.py
tests/: test_search.py  test_timectl.py
vala/: __init__.py  allie.py  bot.py  engine.py  explorer.py  maia.py  pool.py  search.py  timectl.py  uci.py
vala/_allie/: __init__.py  data.py  model.py
